--- a/platformio.ini
+++ b/platformio.ini
@@ -26,25 +26,25 @@
 ;[env:esp32-c3-devkitm-1]
 ;platform = espressif32
 ;board = esp32-c3-devkitm-1
-;board = esp32-c3-devkitc-02
+;;board = esp32-c3-devkitc-02
 ;framework = arduino
 ;build_flags = 
 ;	-D ARDUINO_USB_MODE=1
 ;	-D ARDUINO_USB_CDC_ON_BOOT=1    
 
 ; to use with ESP32-S3 SuperMini
-[env:adafruit_qtpy_esp32s3_n4r2]
-platform = espressif32
-board = adafruit_qtpy_esp32s3_n4r2
-framework = arduino
-build_flags = 
-	-D ARDUINO_USB_MODE=1
-	-D ARDUINO_USB_CDC_ON_BOOT=1    
-
-;[env:esp32dev]
+;[env:adafruit_qtpy_esp32s3_n4r2]
 ;platform = espressif32
-;board = esp32dev
+;board = adafruit_qtpy_esp32s3_n4r2
 ;framework = arduino
+;build_flags = 
+;	-D ARDUINO_USB_MODE=1
+;	-D ARDUINO_USB_CDC_ON_BOOT=1    
+
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+framework = arduino
 ;;board_build.f_cpu = 80000000L                ; set frequency to 80MHz
 
 ;[env:esp32cam]
@@ -58,36 +58,35 @@ build_flags =
 ;framework = arduino
 
 
-;upload_port = /dev/ttyUSB0                    ; Linux/Ubuntu
-upload_port = /dev/ttyACM0                    ; ESP32-C3/S3 Native USB port
-;upload_port = com8                            ; Windows
-;upload_port = 192.168.88.99   ; 09B376;  60:01:94:09:b3:76; ESP_09B376;   ; ESP de Testes
-;upload_flags = "--port=8266 --auth=12345678"
-;upload_protocol = espota                       ; ESP8266 & ESP32
-;upload_protocol = esptool                     ; Deprecated?
+;upload_port = /dev/ttyUSB0                   ; Linux/Ubuntu
+;upload_port = /dev/ttyACM0                   ; ESP32-C3/S3 Native USB port
+;upload_port = com8                           ; Windows
+upload_port = 192.168.88.81                  ; xx:xx:xx:F0:C4:BC  ; TTGo T7
+upload_flags = "--port=8266 --auth=MoodLight"
+upload_protocol = espota                     ; ESP8266 & ESP32
 
 ; Serial Monitor options
-;monitor_port = /dev/ttyUSB0                    ; Linux/Ubuntu
-monitor_port = /dev/ttyACM0                    ; ESP32-C3/S3 Native USB port
-;monitor_port = com8                           ; Windows
+monitor_port = /dev/ttyUSB0                  ; Linux/Ubuntu
+;monitor_port = /dev/ttyACM0                  ; ESP32-C3/S3 Native USB port
+;monitor_port = com8                          ; Windows
 
 ;monitor_speed = 74880
 monitor_speed = 115200
 
 lib_deps =
   knolleary/PubSubClient @ ^2.8               ; required for MQTT
-  bblanchon/ArduinoJson @ ^6.21.3             ; required for MQTT
+  bblanchon/ArduinoJson @ ^6.21.5             ; required for MQTT
   ;ayushsharma82/EasyDDNS @ ^1.8.0            ; required for Easy DDNS (No-IP, dyndns, etc)
   ;adafruit/Adafruit Unified Sensor @ ^1.1.14 ; required for ambient.h
-  ;adafruit/Adafruit BusIO @ ^1.9.1           ; required for I2C or SPI modules
-  ;adafruit/Adafruit GFX Library @ ^1.10.10   ; Install this library in addition to the display library for your display.
+  ;adafruit/Adafruit BusIO @ ^1.17.0           ; required for I2C or SPI modules
+  ;adafruit/Adafruit GFX Library @ ^1.12.0   ; Install this library in addition to the display library for your display.
   ;adafruit/Adafruit ST7735 and ST7789 Library @ ^1.10.3 ; Display Library
   ;adafruit/Adafruit ILI9341 @ ^1.6.0         ; Display Library
   
   ;waspinator/AccelStepper @ ^1.64            ; required for stepper motors
   ;mikalhart/TinyGPSPlus @ ^1.0.3             ; required for GPS module
   ;madhephaestus/ESP32Servo @ ^1.1.2          ; required for PWM Servo (Otto)
-  ;adafruit/Adafruit NeoPixel @ ^1.12.0       ; required for color.h
+  adafruit/Adafruit NeoPixel @ ^1.12.5       ; required for color.h
   ;fastled/FastLED @ ^3.6.0
   ;crankyoldgit/IRremoteESP8266 @ ^2.8.6      ; required for InfraRed.h
   ;dfrobot/DFRobotDFPlayerMini @ ^1.0.6       ; required for dfplayer.h
